fix: make spacing responsive

--- a/app/scss/firo/_tools.maths.scss
+++ b/app/scss/firo/_tools.maths.scss
@@ -14,6 +14,10 @@
   @return round($n * 2);
 }
 
+@function triple($n) {
+  @return round($n * 3);
+}
+
 @function quadruple($n) {
   @return round($n * 4);
 }
